# voicetypr

./: .gitignore  AGENTS.md  CLAUDE.md  package.json
.github/workflows/: ci.yml  release.yml  upstream-sync.yml
docs/plans/: 2026-01-14-remote-transcription-design.md  2026-01-14-save-recordings-design.md  2026-03-26-001-fix-network-sharing-pr-review-findings-plan.md  2026-03-27-002-fix-remote-transcription-merge-readiness-plan.md  2026-04-27-001-feat-auto-paste-toggle-plan.md
docs/reviews/: 2026-03-26-network-sharing-pr-review.md
scripts/: build-parakeet-sidecar.sh  ci-local-macos.sh  ci-local-windows.ps1  ensure-ffmpeg-sidecar.cjs  release-separate.sh  release-windows.ps1  test-parallel-requests.ps1
sidecar/meeting-recorder-swift/: Package.swift  build.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  run-tests.ps1  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: macos.json
src-tauri/src/: lib.rs  secure_store.rs  simple_cache.rs  state_machine.rs  window_manager.rs
src-tauri/src/ai/: anthropic.rs  config.rs  gemini.rs  mod.rs  openai.rs  prompts.rs  tests.rs
src-tauri/src/audio/: converter.rs  device_watcher.rs  normalizer.rs  recorder.rs
src-tauri/src/commands/: ai.rs  audio.rs  device.rs  key_normalizer.rs  license.rs  meetings.rs  mod.rs  model.rs  remote.rs  reset.rs  settings.rs  stt.rs  text.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/license/: device.rs
src-tauri/src/media/: controller.rs  mod.rs
src-tauri/src/meetings/: mod.rs  session.rs  storage.rs  summary.rs  types.rs
src-tauri/src/menu/: mod.rs  tray.rs
src-tauri/src/parakeet/: manager.rs  messages.rs  models.rs  sidecar.rs
src-tauri/src/recognition/: mod.rs  model_selection.rs
src-tauri/src/recording/: escape_handler.rs  hotkeys.rs  mod.rs
src-tauri/src/remote/: client.rs  concurrent_tests.rs  http.rs  integration_tests.rs  lifecycle.rs  transcription.rs
src-tauri/src/state/: app_state.rs  unified_state.rs
src-tauri/src/tests/: audio_commands.rs  logging_performance_tests.rs  remote_client_tests.rs  remote_commands_tests.rs  remote_http_tests.rs  remote_lifecycle_tests.rs  remote_settings_tests.rs  remote_transcription_tests.rs  settings_commands.rs  transcription_history.rs  tray_menu_tests.rs
src-tauri/src/utils/: logger.rs  network_diagnostics.rs  onboarding_logger.rs  system_monitor.rs
src-tauri/src/whisper/: cache.rs  manager.rs  transcriber.rs
src-tauri/windows/: smart-installer-hooks.nsh
src/components/: ApiKeyModal.tsx  AppContainer.test.tsx  AppContainer.tsx  CrashReportDialog.tsx  EnhancementModelCard.tsx  ErrorBoundary.tsx  FeedbackToast.tsx  MeetingSummaryCard.tsx  MeetingTranscript.tsx  MicrophoneSelection.tsx  OpenAICompatConfigModal.tsx  ProviderCard.tsx  RecordingPill.test.tsx  RemoteServerCard.test.tsx  RephraseSettings.tsx  Sidebar.tsx
src/contexts/: ReadinessContext.tsx  SettingsContext.tsx
src/hooks/: useAccessibilityPermission.ts  useAppReadiness.ts  useLicenseStatus.test.ts  useLicenseStatus.ts  useLiveMeeting.ts  useModelAvailability.test.tsx  useModelAvailability.ts  useProviderModels.test.ts  useProviderModels.ts
src/lib/: meeting-format.ts
src/services/: updateService.test.ts  updateService.ts
(+34 files in other folders)
