[package]
name = "voicetypr"
version = "1.12.1"
description = "open source voice to text transcription app"
authors = ["moinulmoin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voicetypr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.15.1" }
cpal = "0.16.0"
hound = "3.5.1"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
futures-util = "0.3.31"
tokio = { version = "1.46.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "stream", "multipart", "blocking"] }
enigo = "0.5.0"
rdev = "0.5.3"
sha2 = "0.10.9"
sha1 = "0.10.6"
arboard = { version = "3.6.0", features = ["image"] }
clipboard-rs = "0.2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
tauri-plugin-log = { version = "2", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
once_cell = "1.20"
dotenv = "0.15"
async-trait = "0.1"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
keyboard-types = "0.7"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
image = "0.25"
pbkdf2 = "0.12"
sysinfo = "0.36.1"
tauri-plugin-notification = "2.3.3"
warp = "0.3"
bytes = "1"
tempfile = "3.10"
hostname = "0.4"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-macos-permissions = "2"
core-graphics = "0.24"
media-remote = "0.3"

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.15.1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Media_Control",
    "Foundation",
] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"
rand = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mic-recorder = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
